# lumaref

./: README.md  ZeeRef.spec  installer.iss  org.zeeref.ZeeRef.appdata.xml  pyproject.toml  zeeref.desktop
tests/: conftest.py  test_layer_move.py  test_locking.py  test_main.py  test_session.py  test_view.py
tests/actions/: test_actions.py
tests/fileio/: test_image.py  test_init.py  test_scratch.py  test_sql.py  test_tiling.py
tests/items/: test_pixmapitem.py
tests/selection/: test_selection_cycling.py
tests/widgets/: test_widgets.py
zeeref/: __main__.py  cli.py  commands.py  constants.py  items.py  scene.py  selection.py  session.py  view.py
zeeref/actions/: actions.py  menu_structure.py
zeeref/config/: settings.py
zeeref/fileio/: __init__.py  image.py  io.py  schema.py  scratch.py  sql.py  tilecache.py  tiling.py
zeeref/types/: snapshot.py
zeeref/widgets/: __init__.py  common.py
