[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zeeref*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.png"]

[project]
name = "LumaRef"
version = "0.4.7"
description = "A reference image viewer"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Zack Gomez", email = "zack.gomez@gmail.com" },
    { name = "Rebecca Breu", email = "rebecca@rbreu.de" },
]
requires-python = ">=3.9"
dependencies = [
    "certifi",
    "exif>=1.3.5",
    "lxml>=5.1.0",
    "Pillow>=10.0.0",
    "pyQt6-Qt6>=6.7.0",
    "pyQt6>=6.7.0",
    "mistune>=3.0.0",
    "rectangle-packer>=2.0.1",
]

[project.optional-dependencies]
# Kept in sync with requirements/*.txt so uv can install tooling via extras.
test = [
    "coverage==7.5.1",
    "httpretty==1.1.4",
    "pytest==8.2.0",
    "pytest-qt==4.4.0",
    "pytest-cov==5.0.0",
]
build = [
    "pyinstaller>=6.19.0",
]
dev = [
    # -r test.txt
    "coverage==7.5.1",
    "httpretty==1.1.4",
    "pytest==8.2.0",
    "pytest-qt==4.4.0",
    "pytest-cov==5.0.0",
    # -r build.txt
    "pyinstaller>=6.19.0",
    # Dev-only
    "ruff>=0.4.0",
    "pybadges==3.0.1",
    "yamllint==1.35.1",
]

[project.scripts]
lumaref-cli = "zeeref.cli:main"

[project.gui-scripts]
lumaref = "zeeref.__main__:main"

[project.urls]
Repository = "https://github.com/safalevent/lumaref"
Issues = "https://github.com/safalevent/lumaref/issues"

[dependency-groups]
dev = [
    "ty>=0.0.23",
    "pyinstaller>=6.19.0",
]

[tool.ty.rules]
invalid-method-override = "ignore"
